#4059 tab.header.Toolbar: fixed sizes for all position to ensure that they don't get "jumpy" when switching the pressed button with a different height / width

--- a/resources/scss/src/tab/header/Toolbar.scss
+++ b/resources/scss/src/tab/header/Toolbar.scss
@@ -1,5 +1,6 @@
 .neo-tab-header-toolbar {
     background-color: transparent;
+    height          : v(tab-button-height-pressed);
     padding         : 0;
 
     &.neo-dock-bottom {
@@ -21,6 +22,9 @@
     }
 
     &.neo-dock-left {
+        height: unset;
+        width : v(tab-button-height-pressed);
+
         .neo-tab-header-button.neo-button {
             background-image: v(tab-button-background-image-left);
             height          : unset;
@@ -41,6 +45,9 @@
     }
 
     &.neo-dock-right {
+        height: unset;
+        width : v(tab-button-height-pressed);
+
         .neo-tab-header-button.neo-button {
             align-self      : start;
             background-image: v(tab-button-background-image-right);
